kubernetes/kyverno/kyverno-add-label-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-label-namespaces
spec:
  rules:
  - name: add-labels
    match:
      resources:
        kinds:
        - Namespace
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            app: "my-application"
