kubernetes/kyverno/kyverno-disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: validate-root-user
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - default
    validate:
      message: "Root user is not allowed."
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
